--- a/app.json
+++ b/app.json
@@ -33,7 +33,9 @@
       "expo-router"
     ],
     "experiments": {
-      "typedRoutes": true
+      "typedRoutes": true,
+      "tsconfigPaths":true
+
     }
   }
 }
